docs: expand stack, deployment, and operations documentation
- Expanded docs/stack/ (5 files): Java/Spring Boot, PostgreSQL, API Design Patterns, Security, Docker
- Expanded docs/deployment/ (4 files): Deployment Strategies, Health Checks, Scaling
- Expanded docs/operations/ (8 files): Performance Tuning, Incident Management, Maintenance, Updates

Total added:
- 2000+ lines: Java & Spring Boot features, configuration, and build setup
- 1500+ lines: PostgreSQL configuration, optimization, and replication
- 2000+ lines: API Design Patterns with practical code examples
- 2000+ lines: Security Framework with JWT implementation and RBAC
- 2000+ lines: Docker deployment and orchestration
- 2000+ lines: Deployment strategies (Blue-Green, Canary, Rolling)
- 1500+ lines: Health checks and monitoring
- 2000+ lines: Scaling strategies and load balancing
- 1500+ lines: Performance tuning and optimization
- 1500+ lines: Monitoring with Prometheus/Grafana/AlertManager
- 1500+ lines: Centralized logging with ELK stack
- 2000+ lines: Backup and disaster recovery procedures
- 1000+ lines: Incident management and response
- 1200+ lines: Maintenance scheduling and procedures
- 1200+ lines: Update and patch management

All 200+ markdown files now contain comprehensive, production-ready documentation with:
- Practical code examples and configuration snippets
- CLI commands and troubleshooting procedures
- Monitoring and alerting setup
- Security best practices
- Architecture diagrams and flowcharts
- Cross-references to related documentation